2010-03-19  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        committers.py should know IRC nicknames
        https://bugs.webkit.org/show_bug.cgi?id=36349

        I'll add the actual nicknames in another patch.

        * Scripts/webkitpy/committers.py:
        * Scripts/webkitpy/committers_unittest.py:

2010-03-18  Anders Bakken  <Anders Bakken <agbakken@gmail.com>>

        Reviewed by Simon Hausmann.

        https://bugs.webkit.org/show_bug.cgi?id=36318

        QtLauncher runs as a GuiClient by default in Qt Embedded which will
        make it try to connect to an existing GuiServer. This patch makes it
        run like a stand-alone app.

        * QtLauncher/main.cpp:
        (LauncherApplication::LauncherApplication):

2010-03-19  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Move find_green_to_red_transition out of "what-broke" onto Builder for easier re-use
        https://bugs.webkit.org/show_bug.cgi?id=36345

        * Scripts/webkitpy/buildbot.py:
        * Scripts/webkitpy/commands/queries.py:

2010-03-19  Adam Barth  <abarth@webkit.org>

        Reviewed by Adam Barth.

        Actually pass the IRC password to the IRC object
        https://bugs.webkit.org/show_bug.cgi?id=36346

        I wanted to do this before, but both patches were in flight.  This
        patch finally closes the loop and makes the IRCProxy system complete.

        * Scripts/webkitpy/patch/patcher.py:

2010-03-18  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Add a StatusServer front end to the SVNRevision table on QueueStatusServer
        https://bugs.webkit.org/show_bug.cgi?id=36344

        No test because Browser was too hard to mock.  :(  I couldn't figure
        out how to make Mock be a dictionary as well as an object.

        * Scripts/webkitpy/statusserver.py:

2010-03-18  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.
