@@ -1,3 +1,15 @@
+2010-03-19  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by Adam Barth.
+
+        Simplify BuildBot core builder code for easier re-use
+        https://bugs.webkit.org/show_bug.cgi?id=36350
+
+        I simply couldn't see anything through all this Yak-hair.
+
+        * Scripts/webkitpy/buildbot.py:
+        * Scripts/webkitpy/commands/queries.py:
+
 2010-03-19  Adam Barth  <abarth@webkit.org>
 
         Reviewed by Eric Seidel.
